force-app/main/default/objects/Account/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <description>Número do CNPJ da empresa.</description>
    <externalId>true</externalId>
    <inlineHelpText>Número do CNPJ da empresa.</inlineHelpText>
    <label>CNPJ</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>