force-app/main/default/objects/Account/fields/CNPJ_disp__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_disp__c</fullName>
    <formula>IF(OR(ISBLANK(CNPJ__c), LEN(CNPJ__c) &lt;&gt; 14), BLANKVALUE(CNPJ__c, ""), MID(CNPJ__c, 1, 2) &amp; "." &amp; MID(CNPJ__c, 3, 3) &amp; "." &amp; MID(CNPJ__c, 6, 3) &amp; "/" &amp; MID(CNPJ__c, 9, 4) &amp; "-" &amp; MID(CNPJ__c, 13, 2))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>CNPJ (exibição)</label>
    <type>Text</type>
</CustomField>