force-app/main/default/objects/Account/fields/Codigo_Externo_ContaAzul__c.field-meta.xml
<CustomField>
    <externalId>true</externalId>
    <fullName>Codigo_Externo_ContaAzul__c</fullName>
    <inlineHelpText>UUID retornado pela API Conta Azul. Não editar manualmente.</inlineHelpText>
    <label>Código Externo ContaAzul</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>