force-app/main/default/objects/Account/fields/CPF_CNPJ__c.field-meta.xml
<CustomField>
    <externalId>true</externalId>
    <fullName>CPF_CNPJ__c</fullName>
    <inlineHelpText>CPF (11 dígitos) ou CNPJ (14 dígitos). Pode ser informado com máscara.</inlineHelpText>
    <label>CPF/CNPJ</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>