force-app/main/default/objects/Account/fields/Fax_disp__c.field-meta.xml
<CustomField>
    <fullName>Fax_disp__c</fullName>
    <formula>IF(ISBLANK(Fax), "", HYPERLINK("tel:" &amp; Fax, IF(LEFT(Fax, 3) = "+55", IF(LEN(Fax) = 14, "+55 (" &amp; MID(Fax, 4, 2) &amp; ") " &amp; MID(Fax, 6, 5) &amp; "-" &amp; MID(Fax, 11, 4), IF(LEN(Fax) = 13, "+55 (" &amp; MID(Fax, 4, 2) &amp; ") " &amp; MID(Fax, 6, 4) &amp; "-" &amp; MID(Fax, 10, 4), Fax)), Fax)))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Fax (exibição)</label>
    <type>Text</type>
</CustomField>