force-app/main/default/objects/Account/fields/Indicador_IE__c.field-meta.xml
<CustomField>
    <fullName>Indicador_IE__c</fullName>
    <label>Indicador IE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contribuinte</fullName>
            </value>
            <value>
                <fullName>Isento</fullName>
            </value>
            <value>
                <default>true</default>
                <fullName>Não Contribuinte</fullName>
                <label>Não Contribuinte</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>