force-app/main/default/objects/Account/fields/Inscricao_Municipal__c.field-meta.xml
<CustomField>
    <fullName>Inscricao_Municipal__c</fullName>
    <label>Inscrição Municipal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>