force-app/main/default/objects/Account/fields/Nome_Fantasia__c.field-meta.xml
<CustomField>
    <fullName>Nome_Fantasia__c</fullName>
    <label>Nome Fantasia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>