force-app/main/default/objects/Account/fields/Optante_Simples__c.field-meta.xml
<CustomField>
    <defaultValue>false</defaultValue>
    <fullName>Optante_Simples__c</fullName>
    <label>Optante Simples</label>
    <type>Checkbox</type>
</CustomField>