force-app/main/default/objects/Account/fields/PersonHomePhone_disp__c.field-meta.xml
<CustomField>
    <fullName>PersonHomePhone_disp__c</fullName>
    <formula>IF(ISBLANK(PersonHomePhone), "", HYPERLINK("tel:" &amp; PersonHomePhone, IF(LEFT(PersonHomePhone, 3) = "+55", IF(LEN(PersonHomePhone) = 14, "+55 (" &amp; MID(PersonHomePhone, 4, 2) &amp; ") " &amp; MID(PersonHomePhone, 6, 5) &amp; "-" &amp; MID(PersonHomePhone, 11, 4), IF(LEN(PersonHomePhone) = 13, "+55 (" &amp; MID(PersonHomePhone, 4, 2) &amp; ") " &amp; MID(PersonHomePhone, 6, 4) &amp; "-" &amp; MID(PersonHomePhone, 10, 4), PersonHomePhone)), PersonHomePhone)) &amp; " " &amp; HYPERLINK("https://wa.me/" &amp; SUBSTITUTE(PersonHomePhone, "+", ""), IMAGE("/resource/WhatsAppIcon", "WhatsApp", 20, 20)))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Telefone Residencial (exibição)</label>
    <type>Text</type>
</CustomField>