force-app/main/default/objects/Account/fields/PersonOtherPhone_disp__c.field-meta.xml
<CustomField>
    <fullName>PersonOtherPhone_disp__c</fullName>
    <formula>IF(ISBLANK(PersonOtherPhone), "", HYPERLINK("tel:" &amp; PersonOtherPhone, IF(LEFT(PersonOtherPhone, 3) = "+55", IF(LEN(PersonOtherPhone) = 14, "+55 (" &amp; MID(PersonOtherPhone, 4, 2) &amp; ") " &amp; MID(PersonOtherPhone, 6, 5) &amp; "-" &amp; MID(PersonOtherPhone, 11, 4), IF(LEN(PersonOtherPhone) = 13, "+55 (" &amp; MID(PersonOtherPhone, 4, 2) &amp; ") " &amp; MID(PersonOtherPhone, 6, 4) &amp; "-" &amp; MID(PersonOtherPhone, 10, 4), PersonOtherPhone)), PersonOtherPhone)) &amp; " " &amp; HYPERLINK("https://wa.me/" &amp; SUBSTITUTE(PersonOtherPhone, "+", ""), IMAGE("/resource/WhatsAppIcon", "WhatsApp", 20, 20)))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Outro Telefone Pessoal (exibição)</label>
    <type>Text</type>
</CustomField>