force-app/main/default/objects/Account/fields/Phone_disp__c.field-meta.xml
<CustomField>
    <fullName>Phone_disp__c</fullName>
    <formula>IF(ISBLANK(Phone), "", HYPERLINK("tel:" &amp; Phone, IF(LEFT(Phone, 3) = "+55", IF(LEN(Phone) = 14, "+55 (" &amp; MID(Phone, 4, 2) &amp; ") " &amp; MID(Phone, 6, 5) &amp; "-" &amp; MID(Phone, 11, 4), IF(LEN(Phone) = 13, "+55 (" &amp; MID(Phone, 4, 2) &amp; ") " &amp; MID(Phone, 6, 4) &amp; "-" &amp; MID(Phone, 10, 4), Phone)), Phone)) &amp; " " &amp; HYPERLINK("https://wa.me/" &amp; SUBSTITUTE(Phone, "+", ""), IMAGE("/resource/WhatsAppIcon", "WhatsApp", 20, 20)))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Telefone (exibição)</label>
    <type>Text</type>
</CustomField>