force-app/main/default/objects/Account/fields/Razao_Social__c.field-meta.xml
<CustomField>
    <fullName>Razao_Social__c</fullName>
    <label>Razão Social</label>
    <length>100</length>
    <type>Text</type>
</CustomField>