force-app/main/default/objects/Account/fields/Tipo_de_Pessoa__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Pessoa__c</fullName>
    <label>Tipo de Pessoa</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Física</fullName>
            </value>
            <value>
                <default>true</default>
                <fullName>Jurídica</fullName>
                <label>Jurídica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>