force-app/main/default/objects/Account/fields/Tipos_de_Conta__c.field-meta.xml
<CustomField>
    <fullName>Tipos_de_Conta__c</fullName>
    <label>Tipos de Conta</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Fornecedor</fullName>
            </value>
            <value>
                <fullName>Órgão Público</fullName>
            </value>
            <value>
                <fullName>Patrocinador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>