force-app/main/default/objects/Account/validationRules/Orgao_Publico_Requer_Papel_Financeiro.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <errorConditionFormula>AND( INCLUDES(Tipos_de_Conta__c, "Órgão Público"), NOT(OR(
        INCLUDES(Tipos_de_Conta__c, "Cliente"), INCLUDES(Tipos_de_Conta__c, "Fornecedor") )) )</errorConditionFormula>
    <errorMessage>Órgão Público é uma classificação. Marque também Cliente, Fornecedor ou ambos para
        indicar a relação financeira com a empresa.</errorMessage>
    <fullName>Orgao_Publico_Requer_Papel_Financeiro</fullName>
</ValidationRule>