force-app/main/default/objects/Account/validationRules/Tipos_de_Conta_Required.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <errorConditionFormula>NOT(OR(INCLUDES(Tipos_de_Conta__c, "Patrocinador"),
        INCLUDES(Tipos_de_Conta__c, "Fornecedor"), INCLUDES(Tipos_de_Conta__c, "Órgão Público"),
        INCLUDES(Tipos_de_Conta__c, "Cliente")))</errorConditionFormula>
    <errorMessage>Selecione ao menos um tipo: Patrocinador, Fornecedor, Órgão Público ou Cliente.</errorMessage>
    <fullName>Tipos_de_Conta_Required</fullName>
</ValidationRule>