force-app/main/default/objects/Account/listViews/Clientes.listView-meta.xml
<ListView>
    <fullName>Clientes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipos_de_Conta__c</field>
        <operation>includes</operation>
        <value>Cliente</value>
    </filters>
    <label>Clientes</label>
</ListView>