force-app/main/default/objects/Account/listViews/Fornecedores.listView-meta.xml
<ListView>
    <fullName>Fornecedores</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Tipo_de_Pessoa__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipos_de_Conta__c</field>
        <operation>includes</operation>
        <value>Fornecedor</value>
    </filters>
    <label>Fornecedores</label>
</ListView>