force-app/main/default/objects/Account/listViews/Orgaos_Publicos.listView-meta.xml
<ListView>
    <fullName>Orgaos_Publicos</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipos_de_Conta__c</field>
        <operation>includes</operation>
        <value>Órgão Público</value>
    </filters>
    <label>Órgãos Públicos</label>
</ListView>